parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@dict.py-9.snap
---
source: parser/src/lexer/lexer.rs
description: "aggregated_key_stats[idx_stat] = {\n    **filter_value_NONE,\n    **filter_key_found,\n    **client_types,\n    **market_watch,\n    \"symbol\": symbol,\n    \"name\": name,\n}"
input_file: parser/test_data/inputs/one_liners/dict.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "aggregated_key_stats",
        ),
        start: 0,
        end: 20,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Identifier,
        value: Str(
            "idx_stat",
        ),
        start: 21,
        end: 29,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 29,
        end: 30,
    },
    Token {
        kind: Assign,
        value: None,
        start: 31,
        end: 32,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 33,
        end: 34,
    },
    Token {
        kind: Pow,
        value: None,
        start: 39,
        end: 41,
    },
    Token {
        kind: Identifier,
        value: Str(
            "filter_value_NONE",
        ),
        start: 41,
        end: 58,
    },
    Token {
        kind: Comma,
        value: None,
        start: 58,
        end: 59,
    },
    Token {
        kind: Pow,
        value: None,
        start: 64,
        end: 66,
    },
    Token {
        kind: Identifier,
        value: Str(
            "filter_key_found",
        ),
        start: 66,
        end: 82,
    },
    Token {
        kind: Comma,
        value: None,
        start: 82,
        end: 83,
    },
    Token {
        kind: Pow,
        value: None,
        start: 88,
        end: 90,
    },
    Token {
        kind: Identifier,
        value: Str(
            "client_types",
        ),
        start: 90,
        end: 102,
    },
    Token {
        kind: Comma,
        value: None,
        start: 102,
        end: 103,
    },
    Token {
        kind: Pow,
        value: None,
        start: 108,
        end: 110,
    },
    Token {
        kind: Identifier,
        value: Str(
            "market_watch",
        ),
        start: 110,
        end: 122,
    },
    Token {
        kind: Comma,
        value: None,
        start: 122,
        end: 123,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"symbol\"",
        ),
        start: 128,
        end: 136,
    },
    Token {
        kind: Colon,
        value: None,
        start: 136,
        end: 137,
    },
    Token {
        kind: Identifier,
        value: Str(
            "symbol",
        ),
        start: 138,
        end: 144,
    },
    Token {
        kind: Comma,
        value: None,
        start: 144,
        end: 145,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"name\"",
        ),
        start: 150,
        end: 156,
    },
    Token {
        kind: Colon,
        value: None,
        start: 156,
        end: 157,
    },
    Token {
        kind: Identifier,
        value: Str(
            "name",
        ),
        start: 158,
        end: 162,
    },
    Token {
        kind: Comma,
        value: None,
        start: 162,
        end: 163,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 164,
        end: 165,
    },
]
